# docs

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  NOTICE.md  README.md  README.rst  experimental.toml  pyproject.toml  todo.rst
.github/: dependabot.yml
api/: _version.py  appendix-a.rst  appendix-b.rst  appendix.rst  backporting.rst  bandit_options.inc  bandit_pyproject.inc  black_options.inc  black_pyproject.inc  changelogs.rst  ci.rst  conf.py  development.rst  dist.inc  dist.rst  docs.inc  docs.rst  file-templates.rst  flake8_options.inc  flake8_pyproject.inc  gh-checkpoint.rst  gh-draft.rst  gh-publish.rst  gh-release.rst  github.rst  glossary.rst  governance.rst  index.rst  invoke.rst  isort_options.inc  isort_pyproject.inc  latex-tools.rst  lint.inc  lint.rst  meson-options.rst  meson-support.rst  modules.rst  mypy_options.inc  mypy_pyproject.inc  ozi.actions.rst  (+46 more)
api/_static/css/: custom.css  meson.build
api/_templates/: footer.html  layout.html  page.html
api/assets/: COPYING.md  README.md
assets/: README.md
policy/: performance-test-checklist.md  safety-assurance-guidance.md  test-code-standards.md  test-code-standards.rst  test-policy.md  test-policy.rst  test-strategy.md  test-strategy.rst
templates/: README.md  meson.options.j2  pyproject.toml.j2
