[build-system]
requires = ["setuptools>=64","setuptools_scm[toml]>=6.2"]

[project]
name = "OZI"
authors = [{name = "Ross J. Duff MSc", email = "ozi.project@outlook.com"}]
# pyproject.toml
[tool.setuptools_scm]
write_to = "api/_version.py"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.setuptools]
packages = ["api"]

[[tool.mypy.overrides]]
module = ["sphinxawesome_theme.*"]
ignore_missing_imports = true